--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.9.5",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^4.0.1",
     "dotenv": "^16.3.1",
